Fixed z-index
Fixed z-index to work on other browsers than Firefox
Also fixed some css tags

--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 
 @import url(drag-and-scroll/style.css); /* styling of elements for scrolling */
 
-	@font-face {
-	  font-family: 'Berkshire Swash';
-	  src: url('fonts/BerkshireSwash-Regular.ttf');
-	}
+@font-face {
+  font-family: 'Berkshire Swash';
+  src: url('fonts/BerkshireSwash-Regular.ttf');
+}
 
 
 /*
@@ -22,20 +22,20 @@ body {
 	-webkit-text-stroke: 1px rgba(0, 0, 0, 0.1);
 }
 
-.tooltip {
+.active-tooltip-bar{
 	font-size: 16px;
 }
 
 @media (max-width: 980px) {
 	body,
-	.tooltip {
+	.active-tooltip-bar{
 		font-size: 14px;
 	}
 }
 
 @media (max-width: 480px) {
 	body,
-	.tooltip {
+	.active-tooltip-bar{
 		font-size: 12px;
 	}
 }
@@ -57,8 +57,48 @@ h1 {
 	font-size: 1.600em;
 }
 
-.borderized {
-	/* used to give a basic border */
+
+
+/*
+ * Vertical Positioning (z-index)
+ *
+ */
+
+
+map area {
+	z-index: 1;
+}
+
+.fixed-container {
+	z-index: 2;
+}
+
+.status-bar,
+.tooltip-bar {
+	z-index: 3;
+}
+
+.active-tooltip-bar {
+	z-index: 4;
+}
+/* The tooltip overlaps the normal tooltip bar. */
+
+
+
+
+
+/*
+ * Bars
+ *
+ */
+
+[class*="-bar"] {
+	/* Used to format most bars. */
+	background-image: url('i/parchment.jpg');
+	background-size: cover;
+	padding: 0.500em 0.650em;
+	color: black;
+	pointer-events: auto; /* Makes the bar clickable */
 	border: 0.100em solid black;
 	border-radius: 0em; /* 0.400em */
 	box-shadow: 0 0 0.200em black;
@@ -67,100 +107,39 @@ h1 {
 	box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
-/*
- * Vertical Positioning (z-index)
- *
- */
-
-.mastermap img
-{ z-index: 1; }
-/* Images of buildings are above the map. */
-
-map area
-{ z-index: 0; }
-/* Hyperlinks of these buildings are further above. */
-
-.status-bar,
-.tooltip-bar 
-{ z-index: 3; }
-/* The main navigation bars stand over the map and its contents. */
-
-.tooltip 
-{ z-index: 4; }
-/* The tooltip overlaps the normal tooltip bar. */
-
-
-/*
- * Visible - Interface Bars
- *
- */
-
-.visible {
-	/* Used to format most bars. */
-	background-image: url('i/parchment.jpg');
-	background-size: cover;
-	padding: 0.500em 0.650em;
-	color: black;
+[class*="-bar"] table {
+	width: 100%;
+	height: 100%;
+	margin-top: -0.100em;
 }
 
-/* Maximum size : */
-	.visible {
-		margin-right: 0.5%;
-		margin-left: 0.5%;
-		width: 99%;
-	}
-
-
-@media (max-width: 1200px) {
-	.visible {
-		margin-right: 1%;
-		margin-left: 1%;
-		width: 98%;
-	}
+[class*="-bar"] td {
+	vertical-align: middle;
+	text-align: center;
+	line-height: 1.5;
 }
 
-@media (max-width: 600px) {
-	.visible {
-		margin-right: 2%;
-		margin-left: 2%;
-		width: 96%;
-	}
+.screen-wide {
+	margin-right: 2vw;
+	margin-left: 2vw;
+	width: 96vw;
 }
 
-
-/*
- * Bars
- *
- */
-
-/*
- * 1%
- * 2.400em status-bar
- *   
- * 5.700em
- * 1%
- * 
- * 
- */
 
 .fixed-container {
 	position: fixed;
+	pointer-events: none; /* Makes the container click-through */
 	width: 100%;
 	height: 100%;
 }
 
 
 .status-bar {
-	top: 1%;
+	top: 2vw;
 	min-height: 2.200em;
-	/*
-	 * 	borderized 2*0.100em
-	 *	padding 2*0.500em
-	 *  content 1.000em
-	 */
-	position: absolute;
 	display: inline-block;
 	vertical-align: middle;
+	position: absolute;
 }
 
 .status-bar .menu {
@@ -178,7 +157,7 @@ map area
 	color: black;
 	width: auto;
 	min-width: 10em;
-	right: 0.5%;
+	right: 2vw;
 }
 
 @media (max-width: 1200px) 	{.menu-submenu 	{right: 1%;}}
@@ -203,39 +182,28 @@ map area
 /* Tooltip Area */
 /****************/
 
-.tooltip,
-.tooltip-bar {
-	bottom: 1%;
+.active-tooltip-bar, .tooltip-bar {
+	bottom: 2vw;
 	text-align: center;
 	vertical-align: middle;
-	position: absolute;	
+	position: absolute;
 }
+
+							.active-tooltip-bar, .tooltip-bar {	height: 15vh; }
+@media (max-width: 980px) {	.active-tooltip-bar, .tooltip-bar {	height: 21vh; } }
+@media (max-width: 480px) {	.active-tooltip-bar, .tooltip-bar {	height: 30vh; } }
+
 
 .tooltip-bar {
 	display: block;
 }
 
-.tooltip {
+.active-tooltip-bar {
 	display: none;
 	box-shadow: 0 0 0;
 }
-
-.visible table {
-	width: 100%;
-	margin-top: -0.100em;
-}
-
-/* Maximum size : */		 .visible table {height: 4.500em;}
-@media (max-width: 980px) 	{.visible table {height: 9.000em;}}
-@media (max-width: 480px) 	{.visible table {height: 13.500em;}}
-
-.visible td {
-	vertical-align: middle;
-	text-align: center;
-	line-height: 1.5;
-}
-
-.close-tooltip {
+ 
+.close-tooltip { 
 	/* Styles the icon which closes a tooltip. */
 	height: 1em;
 	vertical-align: bottom;
@@ -257,8 +225,12 @@ map area
 	margin-left: auto;
 	margin-right: auto;
 	background-image: url('map.png');
+	position: relative;
 }
 
+.mastermap img {
+	position: relative;
+}
 
 .mastermap .line {
 	margin-bottom: -16px;
@@ -276,51 +248,17 @@ map area
 	position: absolute;
 }
 
-map {
-	position: absolute;
-}
-
-map:hover + .tooltip {
+map:hover + .active-tooltip-bar {
 	/* The tooltip is shown upon hover of the building. */
 	display: block;
 }
 
-map:hover + .fixed-container .tooltip {
+map:hover + .fixed-container .active-tooltip-bar {
 	/* The tooltip is shown upon hover of the building. */
 	display: block;
 }
 
-map:target + .tooltip {
+map:target + .active-tooltip-bar {
 	/* The tooltip is shown upon click of the building. */
 	display: block;
-}
-
-/*
- * Login - Audience with the King
- *
- */
-
-#audience-with-the-king {
-	margin-top: 40px;
-	padding: 30px;
-	max-width: 740px;
-	line-height: 1.8;
-	font-size: 16px;
-	overflow: auto;
-}
-
-#audience-with-the-king form {
-	font-family: "Clicker Script";
-	font-size: 22px;
-	margin-top: 5px;
-}
-
-.semi-div {
-	width: 48%;
-	float: left;
-}
-
-.in-between {
-	min-width: 4%;
-	float: left;
 }
